tests/typechecker/should_fail/dot_operator_no_partially_applied_2.csp
datatype A = B.{0..1} | X.{0..1}.{0..1}
channel e : Bool.A.Bool

test11 = (B.X) == (B.X)
